# RenderV2

./: .gitignore  CMakeLists.txt  README.md
assets/car/: car.json
assets/shaders/: compile_shaders.ps1
assets/shaders/code/: car.frag  car.vert  mesh.frag  mesh.vert  pbr_material.frag  test.comp  test.frag  test.vert  triangle.frag  triangle.vert  triangle_texture.frag  triangle_texture.vert
assets/shaders/spv/: car.frag.spv  car.vert.spv  mesh.frag.spv  mesh.vert.spv  pbr_material.frag.spv  test.comp.spv  test.frag.spv  test.vert.spv  triangle.vert.spv  triangle_texture.frag.spv  triangle_texture.vert.spv
docs/: 修改意见.md
src/: CMakeLists.txt  app.cpp
src/Render/: CMakeLists.txt
src/Render/Asset/: CMakeLists.txt
src/Render/Asset/MaterialManager/: CMakeLists.txt
src/Render/Asset/MaterialManager/private/: MaterialManager.cpp
src/Render/Asset/MaterialManager/public/: Material.hpp  MaterialManager.hpp
src/Render/Asset/ResourceManager/: CMakeLIsts.txt
src/Render/Asset/ResourceManager/private/: ResourceManager.cpp  ResourceManagerUtils.cpp
src/Render/Asset/ResourceManager/public/: ResourceManager.hpp  ResourceManagerUtils.hpp  ResourceType.hpp  Utils.hpp
src/Render/Asset/Scene/: CMakeLists.txt
src/Render/Asset/Scene/private/: Scene.cpp
src/Render/Asset/Scene/public/: Camera.hpp  Light.hpp  Scene.hpp  SceneTypes.hpp  SceneUniforms.hpp
src/Render/Renderer/: CMakeLists.txt
src/Render/Renderer/private/: GraphicsPipelineBuilder.cpp  RenderPasses.cpp  RenderResources.cpp  Renderer.cpp
src/Render/Renderer/public/: EngineServices.hpp  GraphicsPipelineBuilder.hpp  RenderPasses.hpp  RenderResources.hpp  Renderer.hpp
src/Render/VkCore/: CMakeLists.txt
src/Render/VkCore/private/: Descriptor.cpp  TransferManager.cpp  VkContext.cpp  VkResource.cpp  VkUtils.cpp  VmaImplementation.cpp
src/Render/VkCore/public/: Descriptor.hpp  Logger.hpp  TransferManager.hpp  VkContext.hpp  VkResource.hpp  VkUtils.hpp  vkcore.hpp
src/UI/: CMakeLIsts.txt  MainWindow.cpp  Mainwindow.hpp  VkRenderWindow.cpp  VkRenderWindow.hpp
